Archive2/3b/25ae271e9f785b/output
main.cpp:23:22: error: goto into protected scope
        if( i > 10 ) goto label ; // *** error: jump bypasses variable initialization
                     ^
main.cpp:18:17: note: jump bypasses variable initialization
            int j = i ;
                ^
main.cpp:34:22: error: goto into protected scope
        if( i > 10 ) goto label ; // *** error: jump bypasses variable initialization
                     ^
main.cpp:29:25: note: jump bypasses variable initialization
            std::string a ;
                        ^
2 errors generated.
